--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "sass": "^1.54.5",
     "vue": "^3.2.37",
     "vue-cli": "^2.9.6",
     "vue-router": "^4.1.5"
