--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "sass": "^1.54.5",
+    "@vue/cli": "^5.0.8",
+    "sass": "^1.54.6",
     "vue": "^3.2.37",
     "vue-cli": "^2.9.6",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
